--- a/src/component/NevigateBar.css
+++ b/src/component/NevigateBar.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 5px 20px;
+    padding: 0 20px;
     background-color: #f8f9fa;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
@@ -26,12 +26,12 @@
 }
 
 button {
-    padding: 10px 15px;
+    padding: 8px 15px;
     margin-left: 10px;
     cursor: pointer;
     border: none;
     border-radius: 5px;
-    font-size: 16px;
+    font-size: 13px;
 }
 
 button.login {
