--- a/src/page/Home.css
+++ b/src/page/Home.css
@@ -30,7 +30,7 @@ h4 {
 }
 
 button {
-    background-color: darkslategrey;
+    background-color: #444444;
     color: white;
     padding: 10px 20px;
     border: none;
@@ -42,15 +42,15 @@ button {
 }
 
 button:hover {
-    background-color: midnightblue;
+    background-color: grey;
 }
 
 button.logout {
-    background-color: dimgray;
+    background-color: grey;
 }
 
 button.logout:hover {
-    background-color: black;
+    background-color: dimgray;
 }
 
 p {
