--- a/src/page/SearchResults.css
+++ b/src/page/SearchResults.css
@@ -28,6 +28,7 @@
     border: 0.5px solid lightgray;
     border-radius: 5px;
     transition: 0.3s ease-in-out;
+    cursor: pointer;
 }
 
 .search-item:hover {
