--- a/src/page/PostFeed.css
+++ b/src/page/PostFeed.css
@@ -157,6 +157,24 @@ h1 {
     width: 40%;
 }
 
+.comment-container {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-right: 3px;
+}
+
+.comment_icon {
+    width: 24px;
+    height: 22px;
+}
+
+. section-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .action-icon {
     width: 24px; /* 아이콘 크기 */
     height: 24px;
