--- a/src/page/Profile.css
+++ b/src/page/Profile.css
@@ -11,6 +11,25 @@
     border-radius: 10px;
 }
 
+.info-follow {
+    gap: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.info-follow p{
+    font-size: 16px;
+
+}
+
+.box-mini{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    gap: 20px;
+}
+
 .profile-header {
     display: flex;
     flex-direction: column;
